# HB42-Call_Me_Maybe

./: Makefile  README.md  ln_cashe.sh  pyproject.toml
data/input/: function_calling_tests.json  functions_definition.json
src/: __init__.py  __main__.py  fn_llm_utils.py  main_cmm.py  pd_valid.py
